<resources>
    <string name="app_name">MyCαlc</string>
    <string name="strEcuaciones">Ecuaciones</string>
    <string name="strMatrices">Matrices</string>
    <string name="srtCalculadora">Calculadora</string>
    <string name="strFormulas">Fórmulas</string>
    <string name="estandar"/>
    <string name="title_activity_herramientas">ActivityHerramientas</string>
    <string name="eliminar_confirmacion">eliminado</string>
    <string name="lista_vacia">lista vacia</string>
    <string name="cos">cos</string>
    <string name="acos">acos</string>
    <string name="_8">8</string>
    <string name="_5">5</string>
    <string name="_2">2</string>
    <string name="_0">0</string>
    <string name="parIzq">)</string>
    <string name="tan">tan</string>
    <string name="atan">atan</string>
    <string name="_9">9</string>
    <string name="_6">6</string>
    <string name="_3">3</string>
    <string name="pot">^</string>
    <string name="sum">+</string>
    <string name="log">log</string>
    <string name="fact">n!</string>
    <string name="limpia">AC</string>
    <string name="divi">/</string>
    <string name="multi">*</string>
    <string name="menos">-</string>
    <string name="raiz">sqrt</string>
    <string name="txAnyadir">Añadir</string>
    <string name="parDer">(</string>
    <string name="punto">.</string>
    <string name="_1">1</string>
    <string name="_4">4</string>
    <string name="_7">7</string>
    <string name="asen">asen</string>
    <string name="sen">sen</string>
    <string name="hintOp">Operacion</string>
    <string name="hintNomOp">Nombre de operacion</string>
    <string name="del">del</string>
    <string name="igual">=</string>
    <string name="porc">%</string>
    <string name="mcm_mcd">MCM/MCD</string>
    <string name="numero_1">Numero 1</string>
    <string name="numero_2">Numero 2</string>
    <string name="maximo_comun_divisor">Maximo Comun Divisor</string>
    <string name="minimo_comun_multiplo">Minimo Comun Multiplo</string>
    <string name="resultado">Resultado</string>
    <string name="ecuaciones">Ecuaciones</string>
    <string name="primer_grado">Primer Grado</string>
    <string name="segundo_grado">Segundo Grado</string>
    <string name="ecuacion">Ecuacion</string>
    <string name="resolver">Resolver</string>
    <string name="valor_de_a">valor de A</string>
    <string name="valor_de_b">valor de B</string>
    <string name="valor_de_c">valor de C</string>
    <string name="volver">volver</string>
    <string name="calculos_con_ecuaciones">Calculos con ecuaciones</string>
    <string name="calculos_por_voz">Calculos por voz</string>
    <string name="principal">MyCαlc</string>
    <string name="calculadora_cientifica">Calculadora Cientifica</string>
    <string name="calculadora_estandar">Calculadora Estandar</string>
    <string name="otras_operaciones_2">Otras Operaciones</string>
    <string name="mis_funciones_2">Mis Funciones</string>
    <string name="hablar">hablar</string>
    <string name="calcular">calcular</string>
    <string name="otras_operaciones">Otras Operaciones</string>
    <string name="mis_funciones">Mis Funciones</string>

</resources>
