<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActivityAgregarFunciones" android:background="@drawable/fondo">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:inputType="text"
        android:ems="10"
        android:id="@+id/edtTitle"
        android:hint="@string/hintNomOp"
        android:background="#ffe0ff91"
        app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="10dp" app:layout_constraintBottom_toTopOf="@id/edtContent"
        app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="parent"
        android:layout_marginEnd="8dp" android:layout_marginRight="8dp" android:layout_marginTop="50dp"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:inputType="text"
        android:ems="10"
        android:id="@+id/edtContent"
        android:background="#ffe0ff91"
        android:focusable="false"
        android:hint="@string/hintOp"
        android:layout_marginBottom="25dp" app:layout_constraintBottom_toTopOf="@id/panelBotones"
        app:layout_constraintTop_toBottomOf="@id/edtTitle"
        android:layout_marginTop="10dp" app:layout_constraintStart_toStartOf="parent"
        android:layout_marginLeft="8dp" android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
        />
    <LinearLayout
        android:id="@+id/panelBotones"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/edtContent"
        android:layout_centerHorizontal="true"
        android:background="#ffe0ff91"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="8dp" android:layout_marginStart="8dp"
        app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
        android:layout_marginTop="25dp"
        app:layout_constraintTop_toBottomOf="@id/edtContent" android:layout_marginBottom="25dp"
        app:layout_constraintBottom_toTopOf="@id/btAnyadir">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/btnSen"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sen"/>

            <Button
                android:id="@+id/btnaSen"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/asen"/>

            <Button
                android:id="@+id/btn7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_7"
                />

            <Button
                android:id="@+id/btn4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_4"/>


            <Button
                android:id="@+id/btn1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_1"/>

            <Button
                android:id="@+id/btnPunto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/punto"/>
            <Button
                    android:id="@+id/btnParIzq"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/parDer" tools:layout_editor_absoluteY="259dp" tools:layout_editor_absoluteX="49dp"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/btnCos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cos"/>

            <Button
                android:id="@+id/btnaCos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/acos"/>

            <Button
                android:id="@+id/btn8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_8"
                />

            <Button
                android:id="@+id/btn5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_5"
                />

            <Button
                android:id="@+id/btn2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_2"/>

            <Button
                android:id="@+id/btn0"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_0"/>
            <Button
                    android:id="@+id/btnParDer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/parIzq" tools:layout_editor_absoluteY="259dp" tools:layout_editor_absoluteX="49dp"/>


        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/btnTan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tan"/>
            <Button
                android:id="@+id/btnaTan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/atan"/>

            <Button
                android:id="@+id/btn9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_9"
                />

            <Button
                android:id="@+id/btn6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_6"
                />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btn3"
                android:text="@string/_3"/>
            <Button
                android:id="@+id/btnPotencia"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pot"/>
            <Button
                    android:id="@+id/btnSuma"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sum" tools:layout_editor_absoluteY="667dp" tools:layout_editor_absoluteX="201dp"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                    android:id="@+id/btnLog"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/log"/>
            <Button
                android:id="@+id/btnFact"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fact"/>
            <Button
                android:id="@+id/btnLimpiar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/limpia"/>

            <Button
                android:id="@+id/btnDividir"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/divi"/>

            <Button
                android:id="@+id/btnMultiplicar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/multi"/>

            <Button
                android:id="@+id/btnResta"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/menos"/>
            <Button
                android:id="@+id/btnRaiz"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/raiz"/>

        </LinearLayout>


    </LinearLayout>
    <Button
        android:text="@string/txAnyadir"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btAnyadir" android:background="#ffe0ff91"
        android:layout_marginTop="10dp" app:layout_constraintTop_toBottomOf="@id/panelBotones"
        android:layout_marginBottom="25dp" app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="8dp"
        android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"
        android:layout_marginLeft="8dp"/>

</android.support.constraint.ConstraintLayout>