<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Principal" android:background="@drawable/fondo">

    <TextView
            android:text="@string/principal"
            android:layout_width="130dp"
            android:layout_height="55dp"
            android:id="@+id/titulo" android:textSize="36sp"
            android:textColor="@color/colorPrimaryDark"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            android:layout_marginTop="50dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="50dp"
            app:layout_constraintBottom_toTopOf="@id/opcCientifica"
            app:layout_constraintVertical_chainStyle="packed"/>
    <Button
            android:text="@string/calculadora_cientifica"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:id="@+id/opcCientifica" android:background="#ffe0ff91"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp" android:layout_marginBottom="25dp"
            app:layout_constraintBottom_toTopOf="@id/opcEstandar" app:layout_constraintHorizontal_bias="0.505"
            android:layout_marginTop="50dp" app:layout_constraintTop_toBottomOf="@id/titulo"/>
    <Button
            android:text="@string/calculadora_estandar"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:id="@+id/opcEstandar" android:background="#ffe0ff91"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp" android:layout_marginBottom="25dp"
            app:layout_constraintBottom_toTopOf="@id/opcFunciones"
            android:layout_marginTop="25dp" app:layout_constraintTop_toBottomOf="@id/opcCientifica"/>
    <Button
            android:text="@string/otras_operaciones"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:id="@+id/opcOtras" android:background="#ffe0ff91"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp" android:layout_marginBottom="50dp"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginTop="25dp"
            app:layout_constraintTop_toBottomOf="@id/opcFunciones"/>
    <Button
            android:text="@string/mis_funciones"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:id="@+id/opcFunciones" android:background="#ffe0ff91"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp" android:layout_marginBottom="25dp"
            app:layout_constraintBottom_toTopOf="@id/opcOtras" android:layout_marginTop="25dp"
            app:layout_constraintTop_toBottomOf="@id/opcEstandar"/>


</android.support.constraint.ConstraintLayout>